// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for state: info and theme: dark 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #04294E;
  border-radius: 4px;
  box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #FBFCFF;
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: info and theme: light 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #D3E1FF;
  border-radius: 4px;
  box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #010205;
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral and theme: dark 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #04294E;
  border-radius: 4px;
  box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #FBFCFF;
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: neutral and theme: light 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #D3E1FF;
  border-radius: 4px;
  box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #010205;
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: success and theme: dark 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #003320;
  border-radius: 4px;
  box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #FBFCFF;
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: plus-lighter;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for state: success and theme: light 1`] = `
":host {
  display: grid;
  opacity: 0;
  max-width: inherit !important;
  box-sizing: border-box !important;
  margin: 0 !important;
  inset: inherit !important;
  border: 0 !important;
  outline: 0 !important;
  overflow: visible !important;
  width: auto !important;
  height: auto !important;
  grid-template-columns: minmax(auto, 1fr) auto;
  gap: 16px;
  place-items: start;
  padding: 16px;
  background: #E4FFEC;
  border-radius: 4px;
  box-shadow: 0px 8px 40px rgba(0, 0, 0, 0.16);
}
:host::backdrop {
  display: none;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
p {
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  margin: 0;
  color: #010205;
  display: grid;
  gap: 4px;
  max-width: 50rem;
  margin-top: 2px;
}
@media(min-width:760px) {
  :host {
    grid-template-columns: auto minmax(auto, 1fr) auto;
  }
  p {
    margin-left: -8px;
  }
}

.icon {
  margin-top: 2px;
}
.close {
  --p-internal-button-scaling: 0;
  mix-blend-mode: multiply;
}
@media(max-width:759px) {
  .icon {
    display: none;
  }
}
"
`;
